correction of visibilty of application link

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1501,3 +1501,23 @@ form .info {
     font-weight: bold;
     -webkit-box-shadow: 1px 1px 2px rgba(0,0,0,.3);
 }
+#application_link{
+	position: absolute;
+	top: 300px;
+	right: 357px;
+	font-size: 337%;
+	border-radius: 4px 4px 4px 4px;
+	-moz-border-radius: 4px 4px 4px 4px;
+	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+	/*background: -moz-linear-gradient(center top , #50B7D1, #286DA3) repeat scroll 0 0 transparent; */   
+	background-color:  #78A419;
+	border: 1px solid #78A419;
+    	display: inline-block;
+    	font-size: 19px;
+    	padding: 15px 30px;
+
+	
+}
+#start_now{
+	margin-bottom: 8em;
+}
